# budgetary-clients

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  biome.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tsconfig.base.json
.changeset/: 0019b-trace-capture.md  0019d-trace-enrichment.md  0019e-expose-package-runner.md  0022b-language-forward.md  0023c-acceptance-forwarding.md  0023e-hallucination-forward.md  README.md  bundle-mcp-server.md  client-void-pending.md  config.json  correctness-mcp-store-integrity.md  correctness-sdk-request-retry.md  correctness-vscode-dashboard.md  cross-session-actual-pairing.md  dashboard-no-retry-freeze.md  dim2-ux-changelog-backfill.md  fix-sdk-dual-publish-types.md  fleet-good-citizenship.md  mcp-close-cost-loop.md  mcp-declare-zod-and-node-engines.md  mcp-registry-listing.md  olive-donkeys-repeat.md  operator-self-service-doctor.md  refactor-config-resolver-to-sdk.md  sdk-billing-hardening.md  sdk-error-richness.md  sdk-node-engines.md  sdk-response-integrity.md  security-local-secrets.md  security-redaction-egress.md  security-sdk-transport.md  soft-eyes-shine.md  status-surface-fidelity.md  store-hook-fault-handling.md  (+6 more)
docs/: sdk-parity.md  (+6 more)
sdk/python/: README.md  pyproject.toml
sdk/python/src/budgetary/: __init__.py  client.py  errors.py  types.py
sdk/python/src/budgetary/_internal/: http.py  idempotency.py  retry.py  url.py
sdk/python/tests/: conftest.py  test_client.py  test_errors.py  test_idempotency.py  test_parity.py  test_retry.py  test_smoke.py  test_transport_security.py
(+120 files in other folders)
