[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "budgetary"
version = "0.0.0"
description = "Python SDK for the Budgetary API."
readme = "README.md"
requires-python = ">=3.10"
license = "Apache-2.0"
authors = [{ name = "Budgetary" }]
keywords = ["budgetary", "llm", "tokens", "cost-estimation"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: Apache Software License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
]
dependencies = [
  "httpx>=0.27",
]

[project.optional-dependencies]
dev = [
  "pytest>=8",
  "respx>=0.21",
]

[project.urls]
Homepage = "https://api.budgetary.tools"
Repository = "https://github.com/thriftell/budgetary-clients"

[tool.hatch.build.targets.wheel]
packages = ["src/budgetary"]

[tool.pytest.ini_options]
testpaths = ["tests"]
